# QuantumCircuitDSL

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  sabre_layout_regression.py
.github/workflows/: ci.yml
bench/: CMakeLists.txt  layout_ablation.py  layout_pareto.py  layout_speed.py  optimise.cpp  route.cpp  simulate.cpp
include/qcdsl/: circuit.hpp  gate.hpp  qcdsl.hpp  version.hpp
include/qcdsl/hw/: coupling_map.hpp
include/qcdsl/ir/: dag.hpp
include/qcdsl/pass/: pass.hpp  passes.hpp  routing.hpp
include/qcdsl/qasm/: qasm3.hpp
include/qcdsl/sim/: kernels.hpp  statevector.hpp
python/: CMakeLists.txt  bindings.cpp
python/qcdsl/: __init__.py
python/tests/: conftest.py  test_bindings.py  test_dag_vs_qiskit.py  test_passes_vs_qiskit.py  test_qasm3_vs_qiskit.py  test_routing_vs_qiskit.py  test_vs_qiskit.py
scripts/: check.sh  format.sh  profile.sh
tests/: CMakeLists.txt  test_circuit.cpp  test_dag.cpp  test_gate.cpp  test_kernels.cpp  test_passes.cpp  test_qasm3.cpp  test_routing.cpp  test_statevector.cpp
